--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,12 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	// https://mvnrepository.com/artifact/org.postgresql/postgresql
+
+	runtimeOnly 'org.postgresql:postgresql:42.3.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
